2009-10-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libchip/i2c/spi-flash-m25p40.c, libchip/i2c/spi-fram-fm25l256.c:
	Use hex-constants to avoid implicit int-casts.
	* libchip/i2c/spi-memdrv.c:
	Use hex-constants to avoid implicit int-casts.
	Use rtems_off64_t offsets to avoid loosing precision.

2009-10-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libchip/serial/ns16550.c: Update for interrupt handler type change.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/bsp-alias.m4: New.
	* configure.ac: Apply RTEMS_BSP_ALIAS for RTEMS_BSP_FAMILY.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/env-rtemsbsp.m4: Remove AM_CONDITIONAL MULTILIB.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove AM_CONDITIONAL MULTILIB.
	* Makefile.am: Remove BARE_CPU_MODEL.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove cfg_dir.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove -std=c99 -fasm.
	Remove AM_CONDITIONAL LIBCHIP.
	* libchip/Makefile.am, wrapup/Makefile.am:
	Remove AM_CONDITIONAL LIBCHIP.

2009-10-17	Ralf Corsepius <ralf.corsepius@rtems.org>

	* configure.ac: Pick up make/custom/*.
	* aclocal/check-custom-bsp.m4: Adapt to changes to configure.ac.

2009-10-16	Ralf Corsepius <ralf.corsepius@rtems.org>

	* wrapup/Makefile.am: Remove AM_CONDITIONAL HAS_LIBBSP.
	* configure.ac: Remove AM_CONDITIONAL HAS_LIBBSP.

2009-10-16	Ralf Corsepius <ralf.corsepius@rtems.org>

	* configure.ac: Remove special case lib/libbsp/bare (Abandoned).

2009-10-16	Ralf Corsepius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove RTEMS_HOST (unused).
	* configure.ac: Remove RTEMS_HOST (unused).
	* aclocal/canonical-target-name.m4: Remove RTEMS_HOST (unused).

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-custom-bsp.m4: Let _RTEMS_CHECK_CUSTOM_BSP look for
	*.cfg into c/src/lib/libbsp/<cpu>/<bsp_family>/make/custom.
