@@ -16,14 +16,14 @@
 #ifndef __ATA_H__
 #define __ATA_H__
 
-#ifdef __cplusplus
-extern "C" {
-#endif
-
 #include <rtems.h>
 #include <sys/ioctl.h>
 
 #include <rtems/blkdev.h>
+
+#ifdef __cplusplus
+extern "C" {
+#endif
 
 rtems_device_driver rtems_ata_initialize(
         rtems_device_major_number major,
